# SnailScale

./: .gitignore  west.yml
app/: CMakeLists.txt  pm_static_xiao_nrf54l15_nrf54l15_cpuapp.yml  prj.conf  sysbuild.cmake  sysbuild.conf
app/boards/: xiao_ble_nrf52840_sense.overlay  xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
app/dts/: partitions.dtsi
app/src/: bluetooth.c  bluetooth.h  display_manager.c  display_manager.h  events.h  fault_handler.c  fault_handler.h  flpr_control.c  heartbeat.c  heartbeat.h  main.c  motion_ipc.c  motion_ipc.h  scale_logic.c  scale_logic.h  symbols.h  touch_sensor.c  touch_sensor.h
app/sysbuild/mcuboot/: prj.conf
app/sysbuild/mcuboot/boards/: xiao_ble_nrf52840_sense.overlay  xiao_nrf54l15_nrf54l15_cpuapp.conf  xiao_nrf54l15_nrf54l15_cpuapp.overlay
app_flpr/: CMakeLists.txt  Kconfig  prj.conf
app_flpr/boards/: xiao_nrf54l15_nrf54l15_cpuflpr.overlay
app_flpr/src/: main.c
doc/: workspace_setup.md
scripts/: bin_to_header.py
snippets/xiao-nrf54l15/: snippet.yml
snippets/xiao-nrf54l15/boards/: xiao_nrf54l15_nrf54l15_cpuapp.conf
